--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,12 +3,12 @@
   <app-side-bar></app-side-bar>
   <div class="back">
     <div class="route-container">
-      <div class="top-bar">
-        @if (RouterService.Title()) {
-          <h1>{{ RouterService.Title() }}</h1>
-        }
-        <a href="https://github.com/timothydodd/utilplex"><img alt="GitHub" src="assets/github-mark.svg" /> </a>
-      </div>
+      @if (RouterService.Title()) {
+        <h1 class="seo-title">{{ RouterService.Title() }}</h1>
+      }
+      <a href="https://github.com/timothydodd/utilplex" class="github-float">
+        <img alt="GitHub" src="assets/github-mark.svg" />
+      </a>
       <router-outlet></router-outlet>
     </div>
   </div>
